build/k8s/billing-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-service
  namespace: app
  labels:
    app: billing-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing-service
  template:
    metadata:
      labels:
        app: billing-service
    spec:
      containers:
        - name: billing-service
          imagePullPolicy: Always
          image: soundsofanarchy/otus-microservices-architect:v3.0.0-billing-service-arm
          ports:
            - containerPort: 9000
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 10m
              memory: 64Mi
