build/k8s/billing-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: billing-service
  namespace: app
spec:
  type: LoadBalancer
  selector:
    app: billing-service
  ports:
    - protocol: TCP
      name: http
      port: 9090
      targetPort: 9000
